# warp

./: Cross.toml  README.md
backends/interpreter/: Cargo.toml
backends/interpreter/src/: lib.rs  runtime.rs
frontend/: Cargo.toml
frontend/src/analysis/lower/: builtins.rs  mod.rs
frontend/src/analysis/typecheck/: display.rs
loaders/default/: Cargo.toml
loaders/default/src/: lib.rs
tools/cli/: Cargo.toml
tools/cli/src/: lsp.rs  main.rs
tools/fuzz/: Cargo.toml
tools/fuzz/src/: compiling.rs  main.rs  parsing.rs  typechecking.rs
tools/test/: Cargo.toml
tools/test/src/: main.rs
tools/vscode/: .gitignore  package-lock.json  package.json
tools/vscode/src/: extension.ts
tools/vscode/syntaxes/: warp.tmLanguage.json
website/: .eleventy.js  package-lock.json  package.json
website/guide/: book.toml
website/guide/scripts/: language-warp.js
website/guide/src/: SUMMARY.md
website/guide/src/00-introduction/: index.md
website/guide/src/01-quick-start/: 00-for-javascript-developers.md  01-for-python-developers.md  02-for-java-developers.md  03-for-rust-developers.md
website/guide/src/02-advanced-warp/: 00-generics.md  01-mutability.md  02-specialization.md  03-type-level-programming.md  index.md
website/guide/src/03-reference/: 00-syntax.md  01-variables-and-patterns.md  02-types-and-generics.md  03-files-and-constants.md  04-traits.md
website/home/: index.html
website/playground/: .gitignore  package-lock.json  package.json
website/playground/components/: code-editor.tsx
website/playground/languages/: index.ts  warp.ts
website/playground/pages/: _app.tsx  index.tsx
website/playground/runner/: Cargo.toml
website/playground/runner/src/: lib.rs
website/playground/styles/: globals.css  language-warp.css
(+14 files in other folders)
