[package]
name = "warp-fuzz"
version = "0.0.0"
edition = "2021"

[dependencies]
arbitrary = "1"
backtrace = "0.3"
clap = { version = "3", features = ["derive"] }
clearscreen = "2"
codespan-reporting = "0.11"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
warp-default-loader = { path = "../../loaders/default" }
warp-frontend = { path = "../../frontend", features = ["arbitrary"] }
